--- a/App/Components/ContentPage/ContentPage.less
+++ b/App/Components/ContentPage/ContentPage.less
@@ -3,10 +3,8 @@
     height: 100%;
 }
 
-.contentpage__theend {
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
+.contentpage__hello {
+    margin-top: 40px;
     font-size: 24px;
     color: red;
 }
