Styling to current app

--- a/App/Components/ContentPage/ContentBody/ContentBody.module.less
+++ b/App/Components/ContentPage/ContentBody/ContentBody.module.less
@@ -3,7 +3,7 @@
 .container {
     background-color: @primary-backround-color;
     height: 100%;
-    padding: 10px;
+    padding: 20px;
 }
 
 .title {
@@ -11,6 +11,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     font-weight: bold;
+    text-align: center;
 }
 
 .summary {
@@ -20,4 +21,5 @@
 .summaryTitle {
     composes: summary;
     font-weight: bold;
+    margin-bottom: 10px;
 }
