--- a/App/Components/ContentPage/ContentBody/ContentBody.module.less
+++ b/App/Components/ContentPage/ContentBody/ContentBody.module.less
@@ -1,8 +1,8 @@
 @import (reference) "../../../Global/Styles/variables.less";
 
 .container {
-    background-color: @primary-backround-color;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
 }
 
@@ -26,5 +26,6 @@
 
 .logo {
     width: 150px;
-    margin-top: 10px;
+    margin-top: 30px;
+    align-self: center;
 }
