--- a/App/Components/ContentPage/ContentPage.module.less
+++ b/App/Components/ContentPage/ContentPage.module.less
@@ -5,10 +5,12 @@
 }
 
 .hello {
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     font-size: 20px;
     color: @green-foreground-color;
     text-align: center;
+    align-self: center;
 }
 
 .button {
@@ -30,4 +32,26 @@
 .message {
     margin-top: 10px;
     font-weight: bold;
+}
+
+.chooseSubreddit {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.posts {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.subredditButton {
+    composes: button;
+    width: auto;
+    flex-grow: 1;
+    margin: 10px;
+}
+
+.subredditButtons {
+    display: flex;
 }
