--- a/App/Components/ContentPage/Posts/PostsList/PostsList.module.less
+++ b/App/Components/ContentPage/Posts/PostsList/PostsList.module.less
@@ -6,4 +6,14 @@
 
 .post {
     padding: 10px 0;
+    color: @green-foreground-color;
+
+    > a {
+        text-decoration: none;
+        color: black;
+    }
+
+    &:hover {
+        background-color: @green-background-color;
+    }
 }
