--- a/App/Components/ContentPage/Posts/PostsList/PostsList.module.less
+++ b/App/Components/ContentPage/Posts/PostsList/PostsList.module.less
@@ -2,6 +2,9 @@
 
 .container {
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .post {
@@ -10,10 +13,14 @@
 
     > a {
         text-decoration: none;
-        color: black;
+        color: @green-foreground-color;
     }
 
     &:hover {
         background-color: @green-background-color;
+    }
+
+    &:nth-of-type(even) {
+        align-self: flex-end;
     }
 }
